--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
         options: >-
+          --default-authentication-plugin=mysql_native_password
           --health-cmd="mysqladmin ping"
           --health-interval=10s
           --health-timeout=5s
