--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
           - 3306
         env:
           MYSQL_ROOT_PASSWORD: root
+          MYSQL_AUTHENTICATION_PLUGIN: mysql_native_password
         options: >-
-          --default-authentication-plugin=mysql_native_password
           --health-cmd="mysqladmin ping"
           --health-interval=10s
           --health-timeout=5s
